--- a/proyecto01/Untitled-2.html
+++ b/proyecto01/Untitled-2.html
@@ -27,7 +27,7 @@
 <body>
     <h1>Bienvenido a mi página de carros</h1>
     
-    <p>En esta página podrás ver algunas imágenes de carros y un video demostrativo.</p>
+    <p>En esta página podrás ver algunas imágenes de carros y un video demostrativo 8.</p>
 
     <!-- Imágenes -->
     <h2>Galería de carros</h2>
