--- a/proyecto01/Untitled-2.html
+++ b/proyecto01/Untitled-2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Página simple de carros agregar </title>
+    <title>Página simple de carros agregar  </title>
     <style>
         body {
             background-color: #000080; /* azul marino */
@@ -44,7 +44,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2025 Mi página de carros</p>
+        <p>&copy; 2025 Mi página de carros asignacion pendiente</p>
     </footer>
 </body>
 </html>
