--- a/proyecto01/Untitled-2.html
+++ b/proyecto01/Untitled-2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Página simple de carros agregar  </title>
+    <title>Página simple de carros agregar cambios </title>
     <style>
         body {
             background-color: #000080; /* azul marino */
