--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
         </div>
     </footer>
 
-    <!-- Firebase SDK v10 Modular -->
+    <!-- Firebase SDK v10 Modular - ACTUALIZADO CON fetchSignInMethodsForEmail -->
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -715,6 +715,7 @@
             updateProfile,
             sendEmailVerification,
             sendPasswordResetEmail,
+            fetchSignInMethodsForEmail,  // ¡IMPORTANTE! Agregado para verificar emails existentes
             GoogleAuthProvider,
             GithubAuthProvider,
             signInWithPopup
@@ -769,6 +770,7 @@
                 updateProfile,
                 sendEmailVerification,
                 sendPasswordResetEmail,
+                fetchSignInMethodsForEmail,  // ¡IMPORTANTE! Agregado para verificar emails existentes
                 GoogleAuthProvider,
                 GithubAuthProvider,
                 signInWithPopup,
