cambios esteticos y todo funcionando correctamente

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="nav-link active" data-page="index">Inicio</a></li>
-                <li><a href="#" class="nav-link" data-page="afinacion-tips">Afinación y Tips</a></li>
+                <li><a href="#" class="nav-link" data-page="afinacion-tips">Afinación</a></li>
                 <li><a href="#" class="nav-link" data-page="metronomo">Metrónomo</a></li>
-                <li><a href="#" class="nav-link" data-page="foro">Mensajes del Admin</a></li>
+                <li><a href="#" class="nav-link" data-page="foro">Avisos</a></li>
                 <li><a href="#" class="nav-link" data-page="partituras">Partituras</a></li>
                 <li><a href="#" class="nav-link" data-page="aprendizaje">Aprendizaje</a></li>
                 <li><a href="#" class="nav-link" data-page="guitarra">Guitarra</a></li>
@@ -158,7 +158,7 @@
                 <p>Bienvenido, <span id="admin-welcome-name" style="font-weight: 600; color: var(--primary-blue);"></span></p>
                 <div class="admin-actions">
                     <button class="btn" onclick="window.manageUsers()">Gestionar Usuarios</button>
-                    <button class="btn" onclick="window.manageContent()">Gestionar Contenido</button>
+                    <button class="btn" onclick="window.manageContent()">Enviar Mensaje</button>
                     <button class="btn" onclick="window.viewStatistics()">Ver Estadísticas</button>
                 </div>
             </div>
@@ -231,24 +231,24 @@
             <!-- Contenido exclusivo para administradores -->
             <div class="admin-only" style="display: none;">
                 <div class="section-title">
-                    <h2>Herramientas de Administración</h2>
-                    <p>Gestiona todos los aspectos de la plataforma</p>
+                    <h2></h2>
+                    <p></p>
                 </div>
                 
-                <div class="features">
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-users"></i>
+                <div class="">
+                    <div class="">
+                        <div class="">
+                            <i class=""></i>
                         </div>
-                        <h3>Gestión de Usuarios</h3>
-                        <p>Administra estudiantes, permisos y seguimiento de actividad</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-bullhorn"></i>
+                    <div class="">
+                        <div class="">
+                            <i class=""></i>
                         </div>
-                        <h3>Publicar Mensajes</h3>
-                        <p>Envía tips y anuncios importantes a todos los usuarios</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
